# PSI2024

./: .gitignore  .pdm.toml  README.md  a.py  db.db  db_schema.mwb  db_schema.mwb.bak  dockerfile  fawfawfawfaw  file.txt  gawgawgvaw  pyproject.toml
FastApi/book_reviews/: models.py
FastApi/book_reviews/app/Book/: schemas.py
FastApi/book_reviews/app/Review/: schemas.py
FastApi/book_reviews/app/User/: schemas.py
LibraryGraphQL/: manage.py
LibraryGraphQL/LibraryGraphQL/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
LibraryGraphQL/appgraphql/: admin.py  apps.py  models.py
LibraryGraphQL/appgraphql/migrations/: 0001_initial.py
LibraryGraphQL/myenv/: pyvenv.cfg
LibraryGraphQL/myenv/Scripts/: activate  activate.bat
PSI24/books/: models.py  serializers.py  urls.py  views.py
book_reviews/: main.py
book_reviews/app/: db.py  models.py
book_reviews/app/Author/: schemas.py
book_reviews/app/User/: crud.py
src/book_reviews/: .env  book_reviews.sqlite3  db.db  main.py  manage.py
src/book_reviews/app/: containers.py  db.py  models.py  settings.py  urls.py  utils.py  wsgi.py
src/book_reviews/app/author/: repositories.py  routes.py  schemas.py  services.py
src/book_reviews/app/book/: repositories.py  routes.py  schemas.py  services.py
src/book_reviews/app/review/: repositories.py  routes.py  schemas.py  services.py
src/book_reviews/app/token/: auth.py  repositories.py  routes.py  schemas.py  services.py
src/book_reviews/book_reviews/: apps.py  asgi.py  models.py  serialisers.py  serializers.py  settings.py  urls.py  views.py
(+8 files in other folders)
